--- a/news.html
+++ b/news.html
@@ -32,3 +32,13 @@
   </body>
 
 </html>
+
+<script type="module">
+
+
+import sidebar from "./components/sidebar.js"
+
+var side_div=document.getElementById("sidebar")
+side_div.innerHTML=sidebar()
+
+</script>
