--- a/search.html
+++ b/search.html
@@ -26,3 +26,14 @@
   </body>
 
 </html>
+
+<script type="module">
+
+
+
+import sidebar from "./components/sidebar.js"
+
+var side_div=document.getElementById("sidebar")
+side_div.innerHTML=sidebar()
+
+</script>
