--- a/search.html
+++ b/search.html
@@ -13,7 +13,16 @@
       <!--No need to add sidebar here, directly display search results-->
 
       <!-- show headline, description and image -->
+      <div id="sidebar">
 
+        <!--DO NOT CHANGE THIS ID's-->
+
+            <!-- side bar -->
+
+           
+       
+
+      </div>
 
 
       Wrong -> <a href="/Users/jonny/Desktop/misc/jugnu-tester/template-U3C4/Template-U3C4/news.html"></a>
